include(CMakeHelper.cmake)

if (NOT TARGET tests)
    add_custom_target(tests)
endif()

add_subdirectory(application)
add_subdirectory(attributes)
add_subdirectory(base64)
add_subdirectory(client)
add_subdirectory(exception)
add_subdirectory(route)
add_subdirectory(router)
add_subdirectory(server)
add_subdirectory(signal)
add_subdirectory(swagger)
add_subdirectory(timer)
add_subdirectory(url)
add_subdirectory(utils)
